[tool.poetry]
name = "map-tools"
version = "0.11.1"
description = ""
authors = ["David Brooks <d.brooks@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipycytoscape = "^1.3.3"
mapknowledge = {url = "https://github.com/AnatomicMaps/map-knowledge/releases/download/v0.11.5/mapknowledge-0.11.5-py3-none-any.whl"}
notebook = "^6.4.12"
igraph = "^0.9.11"

[tool.poetry.dev-dependencies]
rst2pdf = "^0.99"
