[tool.poetry]
name = "map-tools"
version = "0.14.0"
description = ""
authors = ["David Brooks <d.brooks@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
ipycytoscape = "^1.3.3"
mapknowledge = {url = "https://github.com/AnatomicMaps/map-knowledge/releases/download/v0.13.2/mapknowledge-0.13.2-py3-none-any.whl"}
notebook = "^6.4.12"
igraph = "^0.9.11"
jupyterlab = "^3.5.0"

[tool.poetry.dev-dependencies]
rst2pdf = "^0.99"
